# rust_hal_with_c_sdk_framework

./: LICENSE  README.md  README_zh.md
embedded_c_sdk_bind_hal/: CHANGELOG.md  Cargo.toml  README.md  gen_tick.py
embedded_c_sdk_bind_hal/src/: adc.rs  dma.rs  i2c.rs  lib.rs  ll_api.rs  print.rs  pwm.rs  soft_i2c.rs  spi.rs  tick.rs  tick_freq_hz.rs  usart.rs
embedded_c_sdk_bind_hal/src/common/: atomic_ring_buffer.rs  format.rs  mod.rs
embedded_c_sdk_bind_hal/src/gpio/: exti.rs  fast_pin.rs  mod.rs  pin.rs  port.rs
example_ch32v/: Cargo.toml  Link.ld
example_ch32v/.cargo/: config.toml
example_ch32v/examples/: adc-buffered.rs  adc.rs  bare_metal.rs  bmp180.rs  bmp180_api.rs  dma.rs  fast_pin.rs  gpio.rs  port.rs  print.rs  pwm.rs  spi_flash.rs  tft_0_96.rs  tft_0_96_ring.rs  tick_timer.rs  usart.rs
example_ch32v/src/: lib.rs
example_hk32/: Cargo.toml  build.rs
example_hk32/src/: interrupt.rs  main.rs
example_hk32_bare_metal/: Cargo.toml  device.x
example_hk32_bare_metal/src/: main.rs
example_hk32_embassy/: Cargo.toml  memory.x
example_hk32_embassy/.cargo/: config.toml
example_hk32_embassy/src/: main.rs
ll_bind_ch32v20x/: Cargo.toml  build.rs
ll_bind_ch32v20x/csrc/: adc.c  adc.h  dma.c  dma.h  gpio.c  gpio.h  i2c.c  i2c.h  ll_api.c  print.c  pwm.c  pwm.h  spi_bus.c  spi_bus.h  usart.c  usart.h  wrapper.h
ll_bind_ch32v20x/csrc/c_sdk_lib/SRC/Debug/: debug.c  debug.h
ll_bind_ch32v20x/csrc/c_sdk_lib/SRC/Startup/: startup_ch32v20x_D6.S
ll_bind_ch32v20x/src/: interrupt.rs  lib.rs  rt.rs
ll_bind_hk32F0301mxxc/: Cargo.toml  build.rs
ll_bind_hk32F0301mxxc/csrc/: interrupt.c  ll_api.c  print.h  wrapper.h
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/: hk32f0301mxxc_conf.h
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/CMSIS/HK32F0301MxxC/Include/: hk32f0301mxxc.h  system_hk32f0301mxxc.h
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/CMSIS/HK32F0301MxxC/Source/: system_hk32f0301mxxc.c
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/CMSIS/HK32F0301MxxC/Source/ARM/: KEIL_Startup_hk32f0301mxxc.s
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/CMSIS/HK32F0301MxxC/Source/IAR/: IAR_Sartup_hk32f0301mxxc.s
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/HK32F0301MxxC_Lib/inc/: hk32f0301mxxc_adc.h  hk32f0301mxxc_awut.h  hk32f0301mxxc_conf_Template.h  hk32f0301mxxc_crc.h  hk32f0301mxxc_dbgmcu.h  hk32f0301mxxc_def.h  hk32f0301mxxc_exti.h  hk32f0301mxxc_flash.h  hk32f0301mxxc_gpio.h  hk32f0301mxxc_i2c.h  hk32f0301mxxc_iwdg.h  hk32f0301mxxc_misc.h  hk32f0301mxxc_pwr.h  hk32f0301mxxc_rcc.h  hk32f0301mxxc_spi.h  hk32f0301mxxc_syscfg.h  hk32f0301mxxc_tim.h  hk32f0301mxxc_uart.h  hk32f0301mxxc_wwdg.h
ll_bind_hk32F0301mxxc/csrc/c_sdk_lib/HK32F0301MxxC_Lib/src/: hk32f0301mxxc_adc.c  hk32f0301mxxc_awut.c  hk32f0301mxxc_crc.c  hk32f0301mxxc_dbgmcu.c  hk32f0301mxxc_exti.c  hk32f0301mxxc_flash.c  hk32f0301mxxc_gpio.c  hk32f0301mxxc_i2c.c  hk32f0301mxxc_iwdg.c  hk32f0301mxxc_misc.c  hk32f0301mxxc_pwr.c  hk32f0301mxxc_rcc.c  hk32f0301mxxc_spi.c  hk32f0301mxxc_syscfg.c  hk32f0301mxxc_tim.c  hk32f0301mxxc_uart.c  hk32f0301mxxc_wwdg.c
ll_bind_hk32F0301mxxc/src/: lib.rs  rt.rs
local-static/: Cargo.toml  README.md
local-static/src/: lib.rs
print-macros/: Cargo.toml
print-macros/src/: lib.rs
soft-i2c/: Cargo.toml  README.md
soft-i2c/src/: lib.rs  soft_i2c.rs
