[package]
name = "embedded-c-sdk-bind-hal"
version = "0.3.0"
edition = "2021"
authors = ["Merisy-Thing <merisy-thing@outlook.com>"]
description = "Embedded C SDK bind HAL"
readme = "README.md"
keywords = ["embedded", "csdk", "c-sdk", "bind"]
categories = ["embedded", "no-std"]
license = "MIT"
repository = "https://github.com/Merisy-Thing/rust_hal_with_c_sdk_framework"

[dependencies]
critical-section = { version = "1.1.2" }
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

embassy-time-driver = "0.1.0"
heapless = { version = "0.8.0" }
log = "0.4.22"
nb = "1.1.0"
fugit = "0.3.7"
fugit-timer = "0.1.3"
paste = "1.0.15"
embassy-sync = "0.6.0"

[dependencies.portable-atomic]
version = "1.6.0"
default-features = false
features = [
    "fallback",
    "critical-section",
]

[features]
default = []
print-log = []
# enable this feature to use the tick-based time driver as embassy_time_driver
tick-size-64bit = []
embassy = []

USART-0 = ["_usart_impl"]
USART-1 = ["_usart_impl"]
USART-2 = ["_usart_impl"]
USART-3 = ["_usart_impl"]
USART-4 = ["_usart_impl"]
USART-5 = ["_usart_impl"]
USART-6 = ["_usart_impl"]
USART-7 = ["_usart_impl"]
_usart_impl = [] # internal use

adc-data-type-u8 = ["_adc-buffered"] #default use u16
adc-buffered-ch0 = ["_adc-buffered"]
adc-buffered-ch1 = ["_adc-buffered"]
adc-buffered-ch2 = ["_adc-buffered"]
adc-buffered-ch3 = ["_adc-buffered"]
adc-buffered-ch4 = ["_adc-buffered"]
adc-buffered-ch5 = ["_adc-buffered"]
adc-buffered-ch6 = ["_adc-buffered"]
adc-buffered-ch7 = ["_adc-buffered"]
_adc-buffered = [] # internal use

exti-irq-callback = [] # when exti irq occurs, call user defined fn: exti_irq_callback()

# BEGIN TICKS
# Generated by gen_tick.py. DO NOT EDIT.
## 1Hz Tick Rate
tick-freq-hz-1 = []
## 2Hz Tick Rate
tick-freq-hz-2 = []
## 4Hz Tick Rate
tick-freq-hz-4 = []
## 8Hz Tick Rate
tick-freq-hz-8 = []
## 10Hz Tick Rate
tick-freq-hz-10 = []
## 16Hz Tick Rate
tick-freq-hz-16 = []
## 32Hz Tick Rate
tick-freq-hz-32 = []
## 64Hz Tick Rate
tick-freq-hz-64 = []
## 100Hz Tick Rate
tick-freq-hz-100 = []
## 128Hz Tick Rate
tick-freq-hz-128 = []
## 256Hz Tick Rate
tick-freq-hz-256 = []
## 512Hz Tick Rate
tick-freq-hz-512 = []
## 1.0kHz Tick Rate
tick-freq-hz-1_000 = []
## 2.0kHz Tick Rate
tick-freq-hz-2_000 = []
## 4.0kHz Tick Rate
tick-freq-hz-4_000 = []
## 8.0kHz Tick Rate
tick-freq-hz-8_000 = []
## 10.0kHz Tick Rate
tick-freq-hz-10_000 = []
## 16.0kHz Tick Rate
tick-freq-hz-16_000 = []
## 32.0kHz Tick Rate
tick-freq-hz-32_000 = []
## 64.0kHz Tick Rate
tick-freq-hz-64_000 = []
## 100.0kHz Tick Rate
tick-freq-hz-100_000 = []
## 128.0kHz Tick Rate
tick-freq-hz-128_000 = []
## 256.0kHz Tick Rate
tick-freq-hz-256_000 = []
## 512.0kHz Tick Rate
tick-freq-hz-512_000 = []
## 1.0MHz Tick Rate
tick-freq-hz-1_000_000 = []
# END TICKS
