[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "1.0.0"
riscv = { version = "0.14.0" }
riscv-rt-macros = "0.5.0"
portable-atomic = {version = "1.11.1", features = ["critical-section"] }

embedded-hal = { version = "1.0.0" }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

embassy-executor = { version="0.9.1", features=["arch-riscv32", "executor-thread"] }
embassy-time = { version="0.5.0", features=["tick-hz-1_000"] }
embassy-futures = "0.1.2"

ll_bind_ch32v20x = { version = "0.1.0", path = "../ll_bind_ch32v20x" }
fugit = "0.3.7"
w25q32jv = "0.5.1"
embedded-storage = "0.3.1"
st7735-lcd = "0.10.0"
embedded-graphics = { version = "0.8.1", features = ["fixed_point"]}
bmp180-embedded-hal = { version = "0.1.0", default-features = false, features = ["blocking", "impl-debug"]}
once_cell = { version = "1.21.3", default-features = false, features = ["portable-atomic"]}

[dependencies.embedded-c-sdk-bind-hal]
path = "../embedded_c_sdk_bind_hal"
features = [
	"tick-size-64bit",
	"embassy",
	"print-log-csdk",
	"USART-2",
	"adc-buffered-ch0",
]

[dependencies.soft-i2c]
path = "../soft-i2c"

[dependencies.local_static]
path = "../local-static"

[profile.release]
strip = false
lto = false
