[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"
cortex-m-rt = { version = "0.7", features = ["device"]}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}

panic-halt = "0.2"

embedded-hal = { version = "1.0.0" }

ll_bind_hk32F0301mxxc = { version = "0.1.0", path = "../ll_bind_hk32F0301mxxc" }

[dependencies.embedded-c-sdk-bind-hal]
path = "../embedded_c_sdk_bind_hal"
features = [
	"USART-2",
	"adc-buffered-ch0",
]

[profile.release]
strip = false
lto = true
